--- a/html/index.html
+++ b/html/index.html
@@ -7,13 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.min.css">
 
 </head>
 
 <body>
     <header>
         <div>
-            <img src="GrimshawGraphics_Stacked_Logo_Rev.png" alt="logo">
+            <img src="../image/GrimshawGraphics_Stacked_Logo_Rev.png" alt="logo">
         </div>
         <hr>
         <div class="header">
@@ -228,6 +229,70 @@
             </div>
         </div>
     </main>
+    <footer>
+        
+        <div class="h1_button">
+            <h1> Let’s create some magic together.</h1>
+            <button>WORK WITH ME</button>
+        </div>
+        <div class="footer_imgs">
+            <a href="https://www.instagram.com/p/C1P51dzPZPS/">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1703453225106-0JEDRJP9DMGTDIZHFWKM/image-asset.jpeg?format=500w" alt="man_women_dog">
+            </a>
+            <a href="https://www.instagram.com/reel/C1DQw4lPzK2/embed/?autoplay=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1703028217939-6RYFB05S9II3U4HUZ70S/image-asset.jpeg?format=500w" alt="comp">
+            </a>
+            <a href="https://www.instagram.com/reel/C05Cj82vprQ/embed/?autoplay=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1702682286314-HMNL7Q302TS92NPRCHQX/image-asset.jpeg?format=500w" alt="women_dog">
+            </a>
+            <a href="https://www.instagram.com/p/C02ft4eP9JC/?img_index=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1702595757878-JIR0URIZPNTK19X9ZAQ6/image-asset.jpeg?format=500w" alt="palettes">
+            </a>
+            <a href="https://www.instagram.com/reel/C0xQSwVhMSn/embed/?autoplay=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1702422568700-JJTJVW1SX9YBL4HT1ZTV/image-asset.jpeg?format=500w" alt="charlie_holiday">
+            </a>
+            <a href="https://www.instagram.com/reel/C0uZyGwPgHx/embed/?autoplay=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1702328715699-D23SXOCOUHKUVCF8JKUX/image-asset.jpeg?format=500w" alt="moodboard">
+            </a>
+            <a href="https://www.instagram.com/reel/C0kVG3oRMey/embed/?autoplay=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1701988011175-94ZNQW11UH2KUF7GJ8ND/image-asset.jpeg?format=500w" alt="charlie_holiday_mobile">
+            </a>
+            <a href="https://www.instagram.com/p/C0h2R66MkhQ/?img_index=1">
+                <img src="https://images.squarespace-cdn.com/content/v1/616e0744511e9f0d8db6a8a2/1701903416777-SF7U7MWAJTY8AH1IK3FO/image-asset.jpeg?format=500w" alt="five_free_font">
+            </a>
+        </div>
+        <div class="links_icon_ready">
+            <div class="quick_links">
+                <h3>QUICK LINKS</h3>
+                <p class="first_list"><a href="#home">Home</a>
+                <a href="#services">Services</a>
+                <a href="#about">About</a></p>
+                <p class="second_list"><a href="#work">Work</a>
+                <a href="#contact">Contact</a>
+                <a href="#faq">FAQ</a></p>
+            </div>
+            <div class="footer_logo">
+                <img src="https://static1.squarespace.com/static/616e0744511e9f0d8db6a8a2/t/64dec7e100e7247ce3f511e0/1692321761182/GrimshawGraphics_Mark_Logo_Purple.png" alt="footer_logo">
+            </div>
+            <div class="ready">
+                <h3>READY FOR SOME 
+                KICK-ASS BRANDING?</h3>
+                <a href="#contact">Let’s work together!</a></div>
+        </div>
+            <div class="footer_icons">
+                <i class="ri-instagram-line"></i>
+                <i class="ri-linkedin-fill"></i>
+            </div>
+            <div class="footer_Copyright">
+                <p>Based in Kelowna and Vancouver, BC but happily working with clients from all over the world.</p><br>
+                <p>Copyright © 2023 Grimshaw Graphics. All rights reserved.</p>
+                <div class="privacy-policy">
+                    <a href="https://grimshawgraphics.com/privacy-policy">Privacy Policy  </a>
+                    <a href="https://grimshawgraphics.com/terms-and-conditions"> Terms and Conditions</a>
+                </div>
+            </div>
+    </footer>
+    
 
 
     <script src="../js/index.js"></script>
